# cuketa

./: .gitignore  CMakeLists.txt  README.md  batch_compile.py  batch_data_to_latex.py  batch_run_all.sh  main.cu  mrmini.jl  mrmini.py  utils.cuh
report/: citations.bib  main.tex
